add mdi, bootstrap cdn, semantic ui cdn; edit header, utils

--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mdi/js": "^5.7.55",
+    "@mdi/react": "^1.4.0",
+    "bootstrap": "^4.5.3",
     "node-sass": "^4.14.1",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
