--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/vyasa1999/Laundr-e-commerce.git"
+    "url": "git+https://github.com/vyasa1999/Laundr-e-commerce.git"
   },
   "keywords": [],
   "author": "Dakota Rennemann",
@@ -31,5 +31,8 @@
     "supertest": "^4.0.2",
     "mocha": "^6.2.1"
   },
-  "homepage": "https://github.com/vyasa1999/Laundr-e-commerce.git#readme"
+  "homepage": "https://github.com/vyasa1999/Laundr-e-commerce.git#readme",
+  "bugs": {
+    "url": "https://github.com/vyasa1999/Laundr-e-commerce/issues"
+  }
 }
