--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mocha": "^6.2.1",
     "mongoose": "^5.7.1",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.10",
     "should": "^13.2.3",
+    "stripe": "^8.119.0",
     "supertest": "^4.0.2"
   },
   "homepage": "https://github.com/vyasa1999/Laundr-e-commerce.git#readme"
