--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "all": "0.0.0",
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.0",
+    "connect-mongo": "^3.2.0",
+    "connect-mongodb-session": "^2.4.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "mocha": "^6.2.1",
