--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "fullpage.js": "^3.0.9",
     "node-sass": "^4.14.1",
     "react": "^16.10.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.10.1",
     "react-scripts": "3.1.2"
   },
