--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "Dakota Rennemann",
   "license": "MIT",
   "dependencies": {
+    "@fullpage/react-fullpage": "^0.1.18",
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.0",
     "express": "^4.17.1",
@@ -29,6 +30,8 @@
     "mongoose": "^5.7.1",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.10",
+    "react-bootstrap-validation": "^0.1.11",
+    "react-page-scroller": "^2.0.11-beta",
     "should": "^13.2.3",
     "supertest": "^4.0.2"
   },
