--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,17 @@
     "@mdi/react": "^1.4.0",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "connected-react-router": "^6.8.0",
     "fullpage.js": "^3.0.9",
     "node-sass": "^4.14.1",
     "react": "^16.10.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.10.1",
-    "react-scripts": "3.1.2"
+    "react-notification-system-redux": "^2.0.1",
+    "react-redux": "^7.2.2",
+    "react-scripts": "3.1.2",
+    "reactstrap": "^8.7.1",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
