--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,13 @@
     "connected-react-router": "^6.8.0",
     "fullpage.js": "^3.0.9",
     "node-sass": "^4.14.1",
-    "react": "^16.10.1",
+    "react": "^16.14.0",
     "react-bootstrap": "^1.4.0",
-    "react-dom": "^16.10.1",
+    "react-dom": "^16.14.0",
     "react-notification-system-redux": "^2.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "3.1.2",
+    "react-sliding-pane": "^6.1.2",
     "reactstrap": "^8.7.1",
     "redux": "^4.0.5"
   },
