--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "nodemon": "^1.18.10",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.0.1",
     "should": "^13.2.3",
     "stripe": "^8.119.0",
     "supertest": "^4.0.2"
