--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "jquery": "^3.5.1",
     "react-router-dom": "^5.1.2"
   },
   "proxy": "http://localhost:3000"
